--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,20 @@
 {
     "files.associations": {
         "ostream": "cpp"
-    }
+    },
+    "python.autoComplete.extraPaths": [
+        "/home/taba/trento_lab_home/ros_ws/devel/lib/python3/dist-packages",
+        "/home/taba/trento_lab_home/ros_ws/install/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages",
+        "/opt/openrobots/lib/pythonPYTHON_VERSION/site-packages",
+        "/home/taba/trento_lab_home/ros_ws/src/locosim/robot_control",
+        "/opt/openrobots/lib/pythonPYTHON_VERSION/site-packages",
+        "/home/taba/trento_lab_home/ros_ws/src/locosim/robot_control",
+        "/opt/openrobots/lib/pythonPYTHON_VERSION/site-packages",
+        "/home/taba/trento_lab_home/ros_ws/src/locosim/robot_control",
+        "/opt/openrobots/lib/python3.8/site-packages",
+        "/home/taba/trento_lab_home/ros_ws/src/locosim/robot_control",
+        "/opt/openrobots/lib/pythonPYTHON_VERSION/site-packages",
+        "/home/taba/trento_lab_home/ros_ws/src/locosim/robot_control"
+    ]
 }
