--- a/project_package/package.xml
+++ b/project_package/package.xml
@@ -2,7 +2,7 @@
 <package format="2">
   <name>project_package</name>
   <version>0.0.0</version>
-  <description>The project_package package</description>
+  <description>Project Package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
