--- a/project_package/CMakeLists.txt
+++ b/project_package/CMakeLists.txt
@@ -12,17 +12,9 @@ catkin_package()
 ## Build talker and listener
 include_directories(include ${catkin_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
 
-add_executable(joint_publisher src/joint_publisher.cpp)
-target_link_libraries(joint_publisher ${catkin_LIBRARIES})
-install(TARGETS joint_publisher
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
-
-add_executable(joint_subscriber src/joint_subscriber.cpp)
-target_link_libraries(joint_subscriber ${catkin_LIBRARIES})
-install(TARGETS joint_subscriber
+add_executable(position_control src/position_control.cpp)
+target_link_libraries(position_control ${catkin_LIBRARIES})
+install(TARGETS position_control
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
