--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,7 +66,8 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "bit": "cpp"
+        "bit": "cpp",
+        "dense": "cpp"
     },
     "python.autoComplete.extraPaths": [
         "/home/taba/trento_lab_home/ros_ws/devel/lib/python3/dist-packages",
