Created library for image recognition step

--- a/computer_vision/src/libraries/CMakeLists.txt
+++ b/computer_vision/src/libraries/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_library(setting settings.cpp)
 add_library(pipeline pipeline.cpp)
 add_library(display_utility display_utility.cpp)
+add_library(recognition recognition.cpp)
