Implemented code to take data from Zed2 Camera

--- a/computer_vision/src/testing/catkin_ws/src/test_package/CMakeLists.txt
+++ b/computer_vision/src/testing/catkin_ws/src/test_package/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.0.2)
 project(test_package)
 
 find_package(PCL 1.10 REQUIRED)
-
+find_package( OpenCV REQUIRED )
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
@@ -22,6 +22,7 @@ include_directories( include
   ${catkin_INCLUDE_DIRS}
   ${EIGEN3_INCLUDE_DIR}
   ${PCL_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
 link_directories(
