--- a/spawn_blocks/CMakeLists.txt
+++ b/spawn_blocks/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(spawn_blocks)
 
-find_package(catkin REQUIRED COMPONENTS roscpp std_msgs)
+add_definitions(-std=c++11)
+
+find_package(catkin REQUIRED COMPONENTS roscpp std_msgs gazebo_ros)
 
 ## Declare a catkin package
 catkin_package()
