--- a/computer_vision/src/libraries/CMakeLists.txt
+++ b/computer_vision/src/libraries/CMakeLists.txt
@@ -2,3 +2,4 @@ add_library(setting settings.cpp)
 add_library(pipeline pipeline.cpp)
 add_library(display_utility display_utility.cpp)
 add_library(recognition recognition.cpp)
+add_library(temp_file_handler temp_file_handler.cpp)
