--- a/computer_vision/src/libraries/CMakeLists.txt
+++ b/computer_vision/src/libraries/CMakeLists.txt
@@ -3,3 +3,4 @@ add_library(pipeline pipeline.cpp)
 add_library(display_utility display_utility.cpp)
 add_library(recognition recognition.cpp)
 add_library(temp_file_handler temp_file_handler.cpp)
+add_library(location_handler location_handler.cpp)
