--- a/computer_vision/src/CMakeLists.txt
+++ b/computer_vision/src/CMakeLists.txt
@@ -3,11 +3,18 @@ project( RobImgProPipe )
 
 #OpenCV Stuff
 find_package( OpenCV REQUIRED )
-include_directories( ${OpenCV_INCLUDE_DIRS} )
+find_package(PCL 1.10 REQUIRED)
+include_directories( ${OpenCV_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} )
+
+link_directories(
+  ${PCL_LIBRARY_DIRS}
+)
 
 #Custom Stuff
-add_executable( ${PROJECT_NAME} image_processing_pipeline.cpp )
-
 add_subdirectory(libraries)
 
+add_executable( ${PROJECT_NAME} image_processing_pipeline.cpp )
 target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} pipeline display_utility setting recognition temp_file_handler location_handler )
+
+add_executable( final block_detection_rosrun.cpp )
+target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} ${PCL_LIBRARIES} pipeline display_utility setting recognition temp_file_handler location_handler )
