--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 
 /catkin_ws/devel/*
 
-/catkin_ws/.catkin_tools/profiles.yaml
+catkin_ws/.catkin_tools/profiles/profiles.yaml
 
 /catkin_ws/src/output_renders/*
