Added Tests for Bezier Curve

--- a/catkin_ws/src/pkg__motion_planning/CMakeLists.txt
+++ b/catkin_ws/src/pkg__motion_planning/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(pkg__motion_planning)
 
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED COMPONENTS
+    roscpp
+)
 
 
 catkin_package(
@@ -14,3 +16,6 @@ add_subdirectory(src/libraries)
 
 add_executable(MotionPlanning_Node src/motion_planning_node.cpp)
 target_link_libraries(MotionPlanning_Node ${catkin_LIBRARIES} bezier_curve motion_planning)
+
+add_executable(MotionPlanning_Test src/motion_planning.test.cpp)
+target_link_libraries(MotionPlanning_Test ${catkin_LIBRARIES} bezier_curve motion_planning)
