--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,8 @@
 
 catkin_ws/.catkin_tools/profiles/profiles.yaml
 
+catkin_ws/.catkin_tools/profiles/*
+!catkin_ws/.catkin_tools/profiles/default
+!catkin_ws/.catkin_tools/profiles/custom_profile
+
 /catkin_ws/src/output_renders/*
