--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /catkin_ws/build/*
-
 /catkin_ws/devel/*
+/catkin_ws/install/*
+/catkin_ws/logs/*
 
 catkin_ws/.catkin_tools/profiles/profiles.yaml
 
