--- a/catkin_ws/src/pkg__dummy_nodes/CMakeLists.txt
+++ b/catkin_ws/src/pkg__dummy_nodes/CMakeLists.txt
@@ -5,12 +5,9 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
-  pcl_msgs
-  pcl_conversions
-  pcl_ros
 )
 
-add_subdirectory(src/libraries)
+#add_subdirectory(src/libraries)
 
 catkin_package(
 #  INCLUDE_DIRS include
@@ -22,7 +19,6 @@ catkin_package(
 include_directories(
 # include
   ${catkin_INCLUDE_DIRS}
-  ${PCL_INCLUDE_DIRS}
 )
 
 add_executable(MotionPlanning_Dummy src/motion_planning.dummy.cpp)
@@ -31,5 +27,5 @@ target_link_libraries(MotionPlanning_Dummy ${catkin_LIBRARIES})
 add_executable(Detection_Dummy src/detection.dummy.cpp)
 target_link_libraries(Detection_Dummy ${catkin_LIBRARIES})
 
-add_executable(Camera_Dummy src/placeholder_camera_data.dummy.cpp)
-target_link_libraries(Camera_Dummy ${catkin_LIBRARIES} temp_file_handler)
+catkin_install_python(PROGRAMS src/placeholder_camera_data.dummy.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
