--- a/catkin_ws/src/pkg__detection/src/libraries/CMakeLists.txt
+++ b/catkin_ws/src/pkg__detection/src/libraries/CMakeLists.txt
@@ -4,3 +4,4 @@ add_library(display_utility display_utility.cpp)
 add_library(recognition recognition.cpp)
 add_library(location_handler location_handler.cpp)
 add_library(detection detection.cpp)
+add_library(temp_file_handler_2 temp_file_handler.cpp)
