--- a/catkin_ws/src/pkg__dummy_nodes/CMakeLists.txt
+++ b/catkin_ws/src/pkg__dummy_nodes/CMakeLists.txt
@@ -1,13 +1,15 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(pkg__dummy_nodes)
 
+find_package(OpenCV 4.2.0 REQUIRED)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  cv_bridge
 )
 
-#add_subdirectory(src/libraries)
+add_subdirectory(src/libraries)
 
 catkin_package(
 #  INCLUDE_DIRS include
@@ -16,9 +18,9 @@ catkin_package(
 #  DEPENDS system_lib
 )
 
-include_directories(
-# include
+include_directories( include
   ${catkin_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
 add_executable(MotionPlanning_Dummy src/motion_planning.dummy.cpp)
@@ -26,6 +28,9 @@ target_link_libraries(MotionPlanning_Dummy ${catkin_LIBRARIES})
 
 add_executable(Detection_Dummy src/detection.dummy.cpp)
 target_link_libraries(Detection_Dummy ${catkin_LIBRARIES})
+
+add_executable(Tempfile_Dummy src/temporary_file_converter.cpp)
+target_link_libraries(Tempfile_Dummy ${catkin_LIBRARIES} ${OpenCV_LIBS} temp_file_handler)
 
 catkin_install_python(PROGRAMS src/placeholder_camera_data.dummy.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
