--- a/catkin_ws/src/pkg__dummy_nodes/CMakeLists.txt
+++ b/catkin_ws/src/pkg__dummy_nodes/CMakeLists.txt
@@ -42,5 +42,8 @@ target_link_libraries(Detection_Dummy ${catkin_LIBRARIES})
 add_executable(SimulatedZed_Dummy src/simulated_zed_data.dummy.cpp)
 target_link_libraries(SimulatedZed_Dummy ${catkin_LIBRARIES})
 
+add_executable(SimulatedCapture_Dummy src/simulated_zed_capture.dummy.cpp)
+target_link_libraries(SimulatedCapture_Dummy ${catkin_LIBRARIES})
+
 catkin_install_python(PROGRAMS src/placeholder_camera_data.dummy.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
