Refactored detection for new communication between nodes

--- a/catkin_ws/src/pkg__detection/CMakeLists.txt
+++ b/catkin_ws/src/pkg__detection/CMakeLists.txt
@@ -28,8 +28,22 @@ link_directories(
   ${PCL_LIBRARY_DIRS}
 )
 
+set( OWN_LIB_SOURCES
+  detection
+  location_handler
+  recognition
+  pipeline
+  settings
+  display_utility
+  data_type_handler
+)
+
 add_executable(Detector_Node src/block_detection_rosrun.cpp)
 target_link_libraries(Detector_Node ${catkin_LIBRARIES} detection location_handler temp_file_handler_2 recognition pipeline setting display_utility)
+
+add_executable(Detection_Node src/detection.node.cpp)
+target_link_libraries(Detection_Node ${catkin_LIBRARIES} ${OWN_LIB_SOURCES})
+
 install(TARGETS Detector_Node
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
