--- a/catkin_ws/src/pkg__detection/src/libraries/CMakeLists.txt
+++ b/catkin_ws/src/pkg__detection/src/libraries/CMakeLists.txt
@@ -1,7 +1,23 @@
 find_package(OpenCV 4.2.0 REQUIRED)
+find_package(catkin REQUIRED COMPONENTS
+  roscpp
+  rospy
+  std_msgs
+  pcl_msgs
+  pcl_conversions
+  pcl_ros
+  cv_bridge
+)
+
 
 include_directories( include
-    ${OpenCV_INCLUDE_DIRS}    
+  ${catkin_INCLUDE_DIRS}
+  ${PCL_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
+)
+
+link_directories(
+  ${PCL_LIBRARY_DIRS}
 )
 
 add_library(setting settings.cpp)
@@ -12,4 +28,4 @@ add_library(location_handler location_handler.cpp)
 add_library(detection detection.cpp)
 add_library(temp_file_handler_2 temp_file_handler.cpp)
 add_library(data_type_handler data_type_handler.cpp)
-target_link_libraries(data_type_handler ${OpenCV_LIBS})
+target_link_libraries(data_type_handler ${catkin_LIBRARIES})
