--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ catkin_ws/.catkin_tools/profiles/*
 !catkin_ws/.catkin_tools/profiles/custom_profile
 
 /catkin_ws/src/output_renders/*
+
+/locosim/*
