Created Intermediary between locosim docker and local implementation

--- a/catkin_ws/src/pkg__zed2_camera/CMakeLists.txt
+++ b/catkin_ws/src/pkg__zed2_camera/CMakeLists.txt
@@ -17,6 +17,9 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
+add_executable(Docker_Proxy src/docker_proxy.node.cpp)
+target_link_libraries(Docker_Proxy ${catkin_LIBRARIES})
+
 #catkin_install_python(PROGRAMS src/camera_rosrun.py
 #  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 #)
