Created node and corresponding launch file to save placeholder captures from the docker environment

--- a/catkin_ws/src/pkg__dummy_nodes/CMakeLists.txt
+++ b/catkin_ws/src/pkg__dummy_nodes/CMakeLists.txt
@@ -39,8 +39,8 @@ target_link_libraries(MotionPlanning_Dummy ${catkin_LIBRARIES})
 add_executable(Core-Detection_Dummy src/detection.dummy.cpp)
 target_link_libraries(Core-Detection_Dummy ${catkin_LIBRARIES})
 
-add_executable(SimulatedZed_Dummy src/simulated_zed_data.dummy.cpp)
-target_link_libraries(SimulatedZed_Dummy ${catkin_LIBRARIES})
+add_executable(CapturePlaceholders_Dummy src/save_camera_data.dummy.cpp)
+target_link_libraries(CapturePlaceholders_Dummy ${catkin_LIBRARIES})
 
 add_executable(SimulatedCapture_Dummy src/simulated_zed_capture.dummy.cpp)
 target_link_libraries(SimulatedCapture_Dummy ${catkin_LIBRARIES})
