--- a/catkin_ws/src/pkg__dummy_nodes/CMakeLists.txt
+++ b/catkin_ws/src/pkg__dummy_nodes/CMakeLists.txt
@@ -50,3 +50,11 @@ target_link_libraries(DisplayCamera_Dummy ${catkin_LIBRARIES})
 
 add_executable(Detection-Core_Dummy src/core_detection.dummy.cpp)
 target_link_libraries(Detection-Core_Dummy ${catkin_LIBRARIES})
+
+# LISTENERS
+
+add_executable(JointState_Listener src/listener.JointState.dummy.cpp)
+target_link_libraries(JointState_Listener ${catkin_LIBRARIES})
+
+add_executable(Float64MultiArray_Listener src/listener.Float64MultiArray.dummy.cpp)
+target_link_libraries(Float64MultiArray_Listener ${catkin_LIBRARIES})
