Adapted position control to the nomenclature of the other packages

--- a/catkin_ws/src/pkg__position_control/package.xml
+++ b/catkin_ws/src/pkg__position_control/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>project_package</name>
+  <name>pkg__position_control</name>
   <version>0.0.0</version>
   <description>Project Package</description>
 
