--- a/catkin_ws/src/pkg__motion_planning/CMakeLists.txt
+++ b/catkin_ws/src/pkg__motion_planning/CMakeLists.txt
@@ -9,7 +9,8 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 )
 
-include_directories(
+include_directories( include 
+    ${catkin_INCLUDE_DIRS}
 )
 
 add_subdirectory(src/libraries)
