Start work on position control

--- a/catkin_ws/src/pkg__dummy_nodes/CMakeLists.txt
+++ b/catkin_ws/src/pkg__dummy_nodes/CMakeLists.txt
@@ -51,6 +51,9 @@ target_link_libraries(DisplayCamera_Dummy ${catkin_LIBRARIES})
 add_executable(Detection-Core_Dummy src/core_detection.dummy.cpp)
 target_link_libraries(Detection-Core_Dummy ${catkin_LIBRARIES})
 
+add_executable(JointStates_Dummy src/joint_states.dummy.cpp)
+target_link_libraries(JointStates_Dummy ${catkin_LIBRARIES})
+
 # LISTENERS
 
 add_executable(JointState_Listener src/listener.JointState.dummy.cpp)
