Progress in inserting blocks into the simulation

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,5 +3,6 @@ services:
     build: .
     container_name: ur5-project
     tty: true
+    network_mode: "host"
     volumes:
       - .:/root/code
