Started to create  detection calibration process

--- a/catkin_ws/src/pkg__detection/CMakeLists.txt
+++ b/catkin_ws/src/pkg__detection/CMakeLists.txt
@@ -41,6 +41,9 @@ set( OWN_LIB_SOURCES
 add_executable(Detection_Node src/detection.node.cpp)
 target_link_libraries(Detection_Node ${catkin_LIBRARIES} ${OWN_LIB_SOURCES})
 
+add_executable(Calibration_Node src/calibration.node.cpp)
+target_link_libraries(Calibration_Node ${catkin_LIBRARIES} ${OWN_LIB_SOURCES})
+
 install(TARGETS Detection_Node
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
