--- a/catkin_ws/.catkin_tools/profiles/default/build.yaml
+++ b/catkin_ws/.catkin_tools/profiles/default/build.yaml
@@ -7,7 +7,7 @@ devel_layout: linked
 devel_space: devel
 extend_path: null
 extends: null
-install: true
+install: false
 install_space: install
 isolate_install: false
 jobs_args: []
