--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,6 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "bit": "cpp"
+        "bit": "cpp",
     }
 }
