Created new gazebo topics interpreter

--- a/catkin_ws/src/pkg__control_new/CMakeLists.txt
+++ b/catkin_ws/src/pkg__control_new/CMakeLists.txt
@@ -25,3 +25,11 @@ install(TARGETS UR5_Node
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+
+add_executable(Gazebo_Interpreter_Node src/gazebo.interface.node.cpp)
+target_link_libraries(Gazebo_Interpreter_Node ${catkin_LIBRARIES} ${OWN_LIB_SOURCES})
+install(TARGETS Gazebo_Interpreter_Node
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
