Refactoring Robot classes for the second time

--- a/catkin_ws/src/pkg__control_new/CMakeLists.txt
+++ b/catkin_ws/src/pkg__control_new/CMakeLists.txt
@@ -33,3 +33,11 @@ install(TARGETS Gazebo_Interpreter_Node
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+
+add_executable(RobotTest_Node src/ur5.test.dummy.cpp)
+target_link_libraries(RobotTest_Node ${catkin_LIBRARIES} ${OWN_LIB_SOURCES})
+install(TARGETS RobotTest_Node
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
